--- a/pom.xml
+++ b/pom.xml
@@ -82,14 +82,32 @@
                 <configuration>
                     <message>Building site for ${project.version}</message>
                 </configuration>
-                <executions>
+<!--                <executions>
                     <execution>
                         <goals>
                             <goal>site</goal>
                         </goals>
                         <phase>site</phase>
                     </execution>
-                </executions>
+                </executions>-->
+            </plugin>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>downloads-maven-plugin</artifactId>
+                <version>0.4</version>
+                <configuration>
+                    <description>Official ${project.name} build of the ${project.version} release</description>
+                    <override>true</override>
+                    <includeAttached>true</includeAttached>
+                </configuration>
+<!--                <executions>
+                    <execution>
+                        <goals>
+                            <goal>upload</goal>
+                        </goals>
+                        <phase>install</phase>
+                    </execution>
+                </executions>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
